# aidev

./: .gitignore  AUTH_OPTIMIZATION_SUMMARY.md  CHANGES.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MCP_plans.md  OLLAMA_FALLBACK_IMPLEMENTATION.md  README.md  ThisOne.js  bak  browser.bak  browser.py  changes.md  doc.md  docker-compose.yaml  docker-compose2.yaml  docker-composeOld.yaml  flow.json  howInOllama.md  new-chatbot.py  nginx.conf  package-lock.json  requirements.txt  run-all-services.sh  run-backend.sh  run-frontend.sh  run-ollama.sh  temp_node_mappings.py  test.yaml  test_chatbot.py  test_connection_fix.py  test_n8n_fix.py  updated_requirements.txt  usefull.md  yes.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
bare-bones/: docker-compose.yaml  nginx.conf
dast/: README.md  config.yaml  jarvis_dast.py  report_generator.py  requirements.txt  run_dast.sh  tui_interface.py  zap_scanner.py
database-backup/: README.md  backup.sh  restore.sh
dev-setup/: README.md  db_reset_dev_only.sql
docs/: README.md  auth_fix_walkthrough.md  authentication-implementation.md  browser-automation.md  chat-context-fix-technical-guide.md  chat-history-422-error-fix.md  (+21 more)
python_back_end/mcp/: pyproject.toml
python_back_end/mcp/clients/: gradio_demo.py
python_back_end/mcp/docs/: README.md
python_back_end/mcp/server/: app.py  auth.py  registry.py  sandbox.py
python_back_end/mcp/server/tools/os_ops/: __init__.py  archive.py  env_vars.py  exec_cmd.py  file_ops.py  parse.py  pdf_extract.py  processes.py  sys_info.py  word_extract.py
(+330 files in other folders)
